--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,17 @@ spring.application.name=PayMyBuddy
 # CONFIGURATION TOMCAT
 server.port=9000
 
+# VOIR LE SQL
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
 # CONFIGURATION BASE DE DONNÉE
 spring.datasource.url=jdbc:mysql://localhost:3306/paymybuddy?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=VFGNyib!AgyLqZ9&Amdq
 
 # CONFIGURATION DU NIVEAUX DES LOGS
-logging.level.root=ERROR
+logging.level.root=INFO
 logging.level.com.paymybuddy=DEBUG
 logging.level.org.springframework.boot.autoconfigure.h2=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
